Fixed footer bottom spacing

--- a/src/components/Analisis2/Footer/Footer.css
+++ b/src/components/Analisis2/Footer/Footer.css
@@ -1,7 +1,8 @@
 .container--footer-am2 {
   text-align: center;
   align-items: center;
-  margin-bottom: 40px;
+  margin-bottom: 20px;
+  padding-bottom: 40px;
 }
 
 .hr--footer-am2 {
